# Prueba

./: nodoMaestro.py  nodoReceptor.py  worker2.py
communication-manager-main@e35042532a7/: Dockerfile
communication-manager-main@e35042532a7/src/: main.rs
imagen/: Cargo.toml  Dockerfile
